--- a/static/index.css
+++ b/static/index.css
@@ -66,6 +66,12 @@ header {
   border: none;
   outline-color: #448899;
 }
+input::placeholder {
+  color: #757575;
+  font-weight: 700;
+  padding-left: 10px;
+  font-size: 16px;
+}
 .search_keyword_btn {
   width: 60px;
   height: 46px;
