--- a/static/index.css
+++ b/static/index.css
@@ -67,16 +67,19 @@ header {
   border: none;
   outline-color: #448899;
 }
+input[type="text"] {
+  font-weight: 700;
+  font-size: 16px;
+  padding-left: 16px;
+}
 input::placeholder {
   color: #757575;
   font-weight: 700;
-  padding-left: 16px;
   font-size: 16px;
 }
 input::-webkit-input-placeholder {
   color: #757575;
   font-weight: 700;
-  padding-left: 16px;
   font-size: 16px;
 }
 .search_keyword_btn {
