--- a/static/index.css
+++ b/static/index.css
@@ -28,6 +28,9 @@ nav {
   flex: none;
   width: 8%;
   justify-content: flex-end;
+  color: #666666;
+  font-size: 16px;
+  font-weight: 500;
 }
 header {
   height: 320px;
@@ -221,9 +224,12 @@ footer {
     width: 90%;
     grid-template-columns: 1fr;
   }
+  .nav_title {
+    margin: 3px;
+  }
   .nav_subtitle {
     flex: none;
-    width: 25%;
+    width: 22%;
     justify-content: space-between;
   }
   header {
