--- a/static/attraction.css
+++ b/static/attraction.css
@@ -29,6 +29,9 @@ nav {
   flex: none;
   width: 8%;
   justify-content: flex-end;
+  color: #666666;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .menu {
@@ -224,11 +227,15 @@ footer {
   }
 }
 @media (max-width: 600px) {
+  .nav_title {
+    margin: 3px;
+  }
   .nav_subtitle {
     flex: none;
-    width: 25%;
+    width: 22%;
     justify-content: space-between;
   }
+
   .menu {
     display: block;
     height: auto;
