--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-}
 nav {
   position: sticky;
   top: 0;
@@ -9,31 +5,6 @@ nav {
   background-color: #ffffff;
   border-bottom: 1px solid #e8e8e8;
 }
-.nav_container {
-  display: flex;
-  width: 1200px;
-  height: 50px;
-  margin: 0 auto;
-  align-items: center;
-}
-.nav_title {
-  flex: auto;
-  width: auto;
-  margin: 10px;
-  color: #448899;
-  font-weight: 700;
-  font-size: 30px;
-  cursor: pointer;
-}
-.nav_subtitle {
-  flex: none;
-  width: 8%;
-  justify-content: flex-end;
-  color: #666666;
-  font-size: 16px;
-  font-weight: 500;
-}
-
 .menu {
   margin: 40px auto;
   display: flex;
@@ -144,7 +115,7 @@ input[type="date"] {
   background-size: 24px;
   background-position: right 8px center;
   background-repeat: no-repeat;
-  background-image: url("https://s3-alpha-sig.figma.com/img/428d/1693/5ff7fe75a58bd30b757f7d6d2d2f2c42?Expires=1743984000&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ArPuzmKdG-~s41iqsUBAh7Lu-8sFcDXb~o8YkUTajgTco1i9ykBIRlEaNrY68U41xlhPun5ucMdhzLOfB0XcuYfWLtQm9rDgMnxtqC2KAmTmK32WENw5X1ik9WyP9mh5qEr8AnYsfjM-1po9DZdmjkISW781CRPoJqVGUm56Jl7fWgwJ0fkNFpxI3yhJfB6c-6mKPH0EwARshpMQ10SDgXxSpmSUK88qw0eAuaeQxY4DkM5jHAj3ZSiICusoHUXWrsCC7wmFB3mz7JOw8OERpV3kZfMRUHnJ3eqhmp-tihXrY9ecYcezFuh9tzXn9Es6eqKjhFNnYkz97f~s~vVVgw__");
+  background-image: url("/static/img/calendar.png");
 }
 input[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
@@ -197,55 +168,44 @@ input[type="radio"]:checked {
   font-weight: 700;
   margin-bottom: 5px;
 }
-footer {
-  background-color: #757575;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.footer_text {
-  font-size: 16px;
-  color: #ffffff;
-}
+
 @media (max-width: 1200px) {
-  .nav_container {
+  .attraction .nav_container {
     width: 90%;
   }
-  .nav_subtitle {
+  .attraction .nav_subtitle {
     width: 15%;
   }
-  .menu {
+  .attraction .menu {
     width: 100%;
   }
-  .line {
+  .attraction .line {
     width: 90%;
   }
-  .information {
+  .attraction .information {
     width: 90%;
   }
 }
 @media (max-width: 600px) {
-  .nav_title {
+  .attraction .nav_title {
     margin: 3px;
   }
-  .nav_subtitle {
+  .attraction .nav_subtitle {
     flex: none;
     width: 22%;
     justify-content: space-between;
   }
 
-  .menu {
+  .attraction .menu {
     display: block;
     height: auto;
     margin: 0 auto;
   }
-  .current_pic {
+  .attraction .current_pic {
     width: 100%;
     height: 350px;
   }
-  .profile {
+  .attraction .profile {
     width: 90%;
     margin: 20px auto;
   }
