--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-}
 nav {
   position: sticky;
   top: 0;
@@ -9,34 +5,11 @@ nav {
   background-color: #ffffff;
   box-shadow: 0px 10px 10px -10px #757575;
 }
-.nav_container {
-  display: flex;
-  width: 1200px;
-  height: 50px;
-  margin: 0 auto;
-  align-items: center;
-}
-.nav_title {
-  flex: auto;
-  width: auto;
-  margin: 10px;
-  color: #448899;
-  font-weight: 700;
-  font-size: 30px;
-}
-.nav_subtitle {
-  flex: none;
-  width: 8%;
-  justify-content: flex-end;
-  color: #666666;
-  font-size: 16px;
-  font-weight: 500;
-}
 header {
   height: 320px;
   display: flex;
   align-items: center;
-  background-image: url("https://s3-alpha-sig.figma.com/img/8e51/49c7/686e7b3ebaa358e8438012f5d6a7a7b6?Expires=1743379200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=Go9GMnqkForpf0bkFnG~4CEiLtITS2pTDfIn0ukQmg9XFZxdzatrMKiy6hdBlEAzG09UBnOS7lAzs2sGSxC7m0hDiaddrI4DWj5y6HsG-wJJ1Mm2dUHNnYhslMT-iss~QhzMJbOLHzCdhOldh1ltfrOlrfWHztMEPvfxcRH~JzS93E-Ujp3DshioDZg6kKHYb2CdwMym7QiX~K1VCW3A1033DfzYtKsQxrIvPqlBmfjc3Jm7tFZo649Z1~vKhJdX2ueZiaBJSZUYeVO-YBvzI0F8P7ntLlnKylvx1CVIKJM2FeYmEajzgNO6cTNnt-AD-oVzZIX1ULOCDOj5XSmHCA__");
+  background-image: url("/static/img/top.png");
   background-repeat: no-repeat;
   background-size: 1920px 480px;
 }
@@ -185,54 +158,45 @@ input::-webkit-input-placeholder {
   font-weight: 700;
   color: #757575;
 }
-footer {
-  background-color: #757575;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.footer_text {
-  font-size: 16px;
-  color: #ffffff;
-}
 
 @media (max-width: 1200px) {
-  .nav_container {
+  .index .nav_container {
     width: 90%;
   }
-  .nav_subtitle {
+  .index .nav_subtitle {
     width: 15%;
   }
-  .outer_header {
+  .index .outer_header {
     width: 90%;
   }
-  .list_bar {
+  .index .list_bar {
     width: 90%;
   }
-  .attractions {
+  .index .attractions {
     width: 90%;
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (max-width: 600px) {
-  header {
+  .index header {
     background-position: left;
   }
-  .attractions {
+  .index .attractions {
     width: 90%;
     grid-template-columns: 1fr;
   }
-  .nav_title {
+  .index .nav_title {
     margin: 3px;
   }
-  .nav_subtitle {
+  .index .nav_subtitle {
     flex: none;
     width: 22%;
     justify-content: space-between;
   }
-  header {
+  .index header {
     background-position: bottom;
+  }
+  .index .block_style {
+    width: 95%;
   }
 }
