--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -116,6 +116,7 @@ input {
   font-size: 19px;
   display: block;
   margin: 20px 0 50px auto;
+  cursor: pointer;
 }
 .no_schedule_text {
   font-size: 16px;
