--- a/static/css/index.css
+++ b/static/css/index.css
@@ -69,6 +69,9 @@ input::-webkit-input-placeholder {
   justify-content: center;
   cursor: pointer;
 }
+.search_keyword_btn:hover {
+  background-color: #476c75;
+}
 .search_icon {
   width: 30px;
   height: 30px;
@@ -93,14 +96,25 @@ input::-webkit-input-placeholder {
   margin-right: 30px;
   cursor: pointer;
 }
+.station:hover {
+  color: #000000;
+}
 .right_direction_icon {
   width: 32px;
   height: 32px;
+  cursor: pointer;
 }
 .left_direction_icon {
   width: 32px;
   height: 32px;
   opacity: 0.5;
+  cursor: pointer;
+}
+.right_direction_icon:hover {
+  opacity: 0.6;
+}
+.left_direction_icon:hover {
+  opacity: 0.3;
 }
 .attractions {
   width: 1200px;
@@ -117,6 +131,9 @@ input::-webkit-input-placeholder {
   height: 240px;
   display: flex;
   flex-direction: column;
+}
+.attraction:hover {
+  box-shadow: 3px 3px 5px #d3d3d3;
 }
 .img_block {
   position: relative;
